--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+appdirs==1.4.0
 Django==1.10.4
+django-datatable==0.2.1
 django-filter==1.0.1
 django-jet==1.0.4
 google-api-python-client==1.6.1
@@ -6,8 +8,10 @@ gunicorn==19.6.0
 httplib2==0.9.2
 Markdown==2.6.7
 oauth2client==4.0.0
+packaging==16.8
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
+pyparsing==2.1.10
 python-http-client==2.2.1
 requests==2.12.3
 rsa==3.4.2
