--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Markdown==2.6.7
 oauth2client==4.0.0
 oauthlib==2.0.2
 packaging==16.8
+psycopg2==2.7.1
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pyparsing==2.1.10
@@ -24,3 +25,4 @@ sendgrid==3.6.3
 sendgrid-django==4.0.4
 six==1.10.0
 uritemplate==3.0.0
+uuid==1.30
