--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ python:
   - "3.7-dev" # 3.7 development branch
   - "nightly" # currently points to 3.7-dev
 install: "pip install -r requirements.txt"
-script: ./manage.py test
+script:
+  - ./manage.py test
+  - pep8 */*.py --exclude="*/migrations,app/settings.py"
