--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Markdown==2.6.7
 oauth2client==4.0.0
 oauthlib==2.0.2
 packaging==16.8
+pep8==1.7.0
 psycopg2==2.7.1
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
