--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ python:
 install: "pip install -r requirements.txt"
 script:
   - ./manage.py test
-  - pep8 */*.py --exclude="*/migrations,app/settings.py"
+  - flake8 */*.py
