--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,29 @@
 appdirs==1.4.0
+defusedxml==0.5.0
 Django==1.10.4
 django-allauth==0.32.0
 django-bootstrap3==8.2.3
 django-datatable==0.2.1
 django-filter==1.0.1
 django-jet==1.0.4
+flake8==3.4.1
 google-api-python-client==1.6.1
 gunicorn==19.6.0
 httplib2==0.9.2
 Markdown==2.6.7
+mccabe==0.6.1
 oauth2client==4.0.0
 oauthlib==2.0.2
 packaging==16.8
-pep8==1.7.0
 psycopg2==2.7.1
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
+pycodestyle==2.3.1
+pyflakes==1.5.0
 pyparsing==2.1.10
 python-http-client==2.2.1
 python-openid==2.2.5
+python3-openid==3.1.0
 requests==2.12.3
 requests-oauthlib==0.8.0
 rsa==3.4.2
