--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "3.7-dev" # 3.7 development branch
   - "nightly" # currently points to 3.7-dev
-install: "pip install -r requirements.txt"
+install: "pip install -r requirements/test.txt"
 script:
   - ./manage.py test
   - flake8 */*.py
