--- a/management.sh.template
+++ b/management.sh.template
@@ -10,3 +10,4 @@ export TP_KEY="TYPEFORM_KEY"
 export EMAIL_HOST_PASSWORD="password"
 ./env/bin/python manage.py insert_applications
 ./env/bin/python manage.py expire_applications
+./env/bin/python manage.py applications_reminder
