--- a/restart.sh.template
+++ b/restart.sh.template
@@ -8,7 +8,7 @@ export DOMAIN="my.hackupc.com"
 export EMAIL_HOST_PASSWORD="password"
 
 echo "checking updates..."
-./env/bin/pip install -r requirements.txt
+./env/bin/pip install -r requirements/prod.txt
 echo "checking updates...done"
 echo "migrating db..."
 ./env/bin/python manage.py migrate
