--- a/restart.sh.template
+++ b/restart.sh.template
@@ -7,7 +7,7 @@ export DOMAIN="my.hackupc.com"
 
 
 echo "checking updates..."
-./env/bin/pip install -r requirements/prod.txt
+./env/bin/pip install -r requirements.txt
 echo "checking updates...done"
 echo "migrating db..."
 ./env/bin/python manage.py migrate
