--- a/app.json
+++ b/app.json
@@ -2,10 +2,24 @@
   "name": "HackAssistant Registration",
   "description": "Hackathon registration server",
   "env": {
-    "DOMAIN": "{SET THIS}.herokuapp.com",
-    "SECRET": "You can generate a random secret with python running: os.urandom(24)",
-    "SG_KEY": "Sendgrid Key. Get it here: https://app.sendgrid.com/settings/api_keys",
-    "SL_TOKEN": "(Optional) Slack token to invite hackers automatically on confirmation. https://api.slack.com/custom-integrations/legacy-tokens",
-    "SL_TEAM": "(Optional)  Slack team name (xxx on xxx.slack.com)"
+    "DOMAIN": {
+      "description": "Domain where app will be running",
+      "value": "{SET THIS}.herokuapp.com"
+    },
+    "SECRET": {
+      "description": "A secret key for verifying the integrity of signed cookies.",
+      "generator": "secret"
+    },
+    "SG_KEY": {
+      "description": "Sendgrid Key. Get it here: https://app.sendgrid.com/settings/api_keys"
+    },
+    "SL_TOKEN": {
+      "description": "Slack token to invite hackers automatically on confirmation. https://api.slack.com/custom-integrations/legacy-tokens",
+      "required": "false"
+    },
+    "SL_TEAM": {
+      "description": "(Optional)  Slack team name (xxx on xxx.slack.com)",
+      "required": "false"
+    }
   }
 }
