--- a/app.json
+++ b/app.json
@@ -15,11 +15,11 @@
     },
     "SL_TOKEN": {
       "description": "Slack token to invite hackers automatically on confirmation. https://api.slack.com/custom-integrations/legacy-tokens",
-      "required": "false"
+      "required": false
     },
     "SL_TEAM": {
-      "description": "(Optional)  Slack team name (xxx on xxx.slack.com)",
-      "required": "false"
+      "description": "Slack team name (xxx on xxx.slack.com)",
+      "required": false
     }
   }
 }
