--- a/management.sh.template
+++ b/management.sh.template
@@ -7,4 +7,4 @@ export SG_KEY="API_KEY"
 # Domain where running
 export DOMAIN="my.hackupc.com"
 
-./env/bin/python manage.py expire_applications
+./env/bin/python manage.py expire_applications && ./env/bin/python manage.py expire_reimbursements
