--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ pyasn1-modules==0.0.8
 pyparsing==2.1.10
 python-http-client==2.2.1
 python-openid==2.2.5
-requests==2.12.3
 requests-oauthlib==0.8.0
 rsa==3.4.2
 sendgrid==3.6.3
@@ -31,3 +30,6 @@ dj-database-url==0.4.2
 whitenoise==3.3.1
 psycopg2==2.7.1
 flake8==3.4.1
+dropbox==8.7.1
+git+https://github.com/jschneier/django-storages.git#egg=django-storages
+requests==2.17.1
