update domain heroku config

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "env": {
     "DOMAIN": {
       "description": "Domain where app will be running",
-      "value": "{SET THIS}.herokuapp.com"
+      "value": ".herokuapp.com"
     },
     "SECRET": {
       "description": "A secret key for verifying the integrity of signed cookies.",
