--- a/requirements.txt
+++ b/requirements.txt
@@ -33,4 +33,4 @@ flake8==3.4.1
 dropbox==8.7.1
 git+https://github.com/jschneier/django-storages.git#egg=django-storages
 requests==2.17.1
-djangorestframwork==3.8.2
+djangorestframework==3.8.2
