--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ flake8==3.4.1
 dropbox==8.7.1
 git+https://github.com/jschneier/django-storages.git#egg=django-storages
 requests==2.17.1
+slackclient==1.3.0
