--- a/requirements.txt
+++ b/requirements.txt
@@ -32,4 +32,4 @@ psycopg2==2.7.1
 flake8==3.4.1
 dropbox==8.7.1
 git+https://github.com/jschneier/django-storages.git#egg=django-storages
-requests==2.17.1
+requests>=2.20.0
