--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,9 @@ uuid==1.30
 pytz==2017.2
 django-tables2==1.14.2
 tablib==0.12.1
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 whitenoise==3.3.1
-psycopg2==2.7.1
+psycopg2>=2.7.2
 flake8==3.4.1
 dropbox==8.7.1
 git+https://github.com/jschneier/django-storages.git#egg=django-storages
