--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,4 @@ git+https://github.com/jschneier/django-storages.git#egg=django-storages
 requests==2.20.0
 slackclient==1.3.0
 djangorestframework==3.8.2
+pillow==6.1.0
