--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps1-{{ .Environment.CIRCLE_JOB}}-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            python3 -m venv env
+            python -m venv env
             . env/bin/activate
             pip install -r requirements.txt
       - save_cache:
@@ -28,7 +28,7 @@ jobs:
           name: Running tests
           command: |
             . env/bin/activate
-            python3 manage.py test
+            python manage.py test
             flake8
       - store_artifacts:
           path: test-reports/
@@ -41,4 +41,3 @@ jobs:
     <<: *test-template
     docker:
       - image: circleci/python:2.7-jessie
-
