--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           key: deps1-{{ .Environment.CIRCLE_JOB}}-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            python -m venv env
+            virtualenv env
             . env/bin/activate
             pip install -r requirements.txt
       - save_cache:
