--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,13 @@ jobs:
       - restore_cache:
           key: deps2-{{ .Environment.CIRCLE_JOB}}-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
+          name: Create virtualenv
           command: |
             if [ "${CIRCLE_JOB}" == "build-2.7" ]; then
                 virtualenv env
             else
                 python3 -m venv env
             fi
-            virtualenv --always-copy env
             . env/bin/activate
             pip install -r requirements.txt
       - save_cache:
