--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
 jobs:
   build-3.7: &test-template
     docker:
-      - image: circleci/python:3.7
+      - image: circleci/python:3.7-jessie
     steps:
       - checkout
       - restore_cache:
@@ -46,6 +46,10 @@ jobs:
     <<: *test-template
     docker:
       - image: circleci/python:3.6-jessie
+   build-3.5:
+     <<: *test-template
+     docker:
+       - image: circleci/python:3.5-jessie
   build-2.7:
     <<: *test-template
     docker:
