--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
 jobs:
   build-3.7: &test-template
     docker:
-      - image: circleci/python:3.7-jessie
+      - image: circleci/python:3.7
     steps:
       - checkout
       - restore_cache:
