--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,7 @@ jobs:
       - run:
           name: Create virtualenv
           command: |
-            if [ "${CIRCLE_JOB}" == "build-2.7" ]; then
-                virtualenv env
-            else
-                python3 -m venv env
-            fi
+            virtualenv env --python=python3
             . env/bin/activate
             pip install -r requirements.txt
       - save_cache:
