--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,11 @@ jobs:
       - run:
           name: Create virtualenv
           command: |
-            virtualenv env --python=python3
+            if [ "${CIRCLE_JOB}" == "build-2.7" ]; then
+                virtualenv env
+            else
+                python3 -m venv env
+            fi
             . env/bin/activate
             pip install -r requirements.txt
       - save_cache:
