--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==1.11.29
+Django==1.11.28
 django-bootstrap3==8.2.3
 django-filter==1.0.2
 django-form-utils==1.0.3
+django-ha-hardware @ git+https://github.com/hackupc/hardware.git@e5f68b0cff7001bf7354257667b1880a821b37fb
 django-jet==1.0.8
-django-multiselectfield==0.1.12
-#django-storages==1.7.2
+django-storages @ git+https://github.com/jschneier/django-storages.git@b116e3a235323144cda6d3cc5a5cb27baf076ee2
 django-tables2==1.14.2
+djangorestframework==3.8.2
 dropbox==8.7.1
 et-xmlfile==1.0.1
 flake8==3.4.1
@@ -19,7 +20,7 @@ google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 gunicorn==19.6.0
-httplib2==0.18.0
+httplib2==0.9.2
 idna==2.7
 jdcal==1.4.1
 Markdown==2.6.7
@@ -29,8 +30,8 @@ oauthlib==2.0.2
 odfpy==1.4.0
 openpyxl==2.6.4
 packaging==16.8
-psycopg2==2.7.5
-psycopg2-binary==2.8.3
+Pillow==2.0.0
+psycopg2-binary~=2.8.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.1
 pycodestyle==2.3.1
@@ -46,18 +47,13 @@ rsa==3.4.2
 sendgrid==3.6.3
 sendgrid-django==4.0.4
 six==1.10.0
+slackclient==1.3.0
 tablib==0.12.1
 unicodecsv==0.14.1
 uritemplate==3.0.0
 urllib3==1.24.3
 uuid==1.30
+websocket-client==0.57.0
 whitenoise==3.3.1
-psycopg2==2.7.5
-flake8==3.4.1
-dropbox==8.7.1
-git+https://github.com/jschneier/django-storages.git#egg=django-storages
-requests==2.20.0
-slackclient==1.3.0
-djangorestframework==3.8.2
-pillow~=2.0.0
-git+https://github.com/hackupc/hardware.git#egg=django-ha-hardware
+xlrd==1.2.0
+xlwt==1.3.0
