--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@ workflows:
   version: 2
   test:
     jobs:
-    #- build-3.6
     - build-3.7
-    #- build-3.8
+    - build-3.8
+    - build-3.9
 
 jobs:
   build-3.7: &test-template
@@ -50,3 +50,7 @@ jobs:
     <<: *test-template
     docker:
       - image: circleci/python:3.8
+  build-3.9:
+      <<: *test-template
+      docker:
+          -   image: circleci/python:3.9
