--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ odfpy==1.4.0
 openpyxl==2.6.4
 packaging==16.8
 psycopg2-binary~=2.8.3
+Pillow==2.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.1
 pycodestyle==2.7.0
