--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ django-multiselectfield==0.1.12
 django-storages @ git+https://github.com/jschneier/django-storages.git@b116e3a235323144cda6d3cc5a5cb27baf076ee2
 django-tables2==2.4.0
 djangorestframework==3.12.4
-django-cas-server @ git+https://github.com/Casassarnau/django-cas-server.git@3236d1179386c06be1a5caedd68dab899f258f31
+django-jwt-oidc
+django-cors-headers
 dropbox==8.7.1
 et-xmlfile==1.0.1
 flake8==3.9.2
