--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.0
+backports.zoneinfo==0.2.1
 cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
@@ -20,7 +21,7 @@ flake8==3.9.2
 google-api-python-client==1.7.9
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
-gunicorn==19.6.0
+gunicorn==20.1.0
 httplib2>=0.19.0
 idna==2.7
 jdcal==1.4.1
@@ -48,6 +49,7 @@ sendgrid-django==4.0.4
 six==1.10.0
 slackclient==1.3.0
 tablib==0.12.1
+tzdata==2023.2
 unicodecsv==0.14.1
 uritemplate==3.0.0
 urllib3>=1.26.5
