--- a/server.sh.template
+++ b/server.sh.template
@@ -12,4 +12,12 @@ export SL_TEAM="test-team"
 # Domain where running
 export DOMAIN="my.hackupc.com"
 
+
+# Modify this when GOOGLE_WALLET Is enabled
+export GOOGLE_WALLET_ISSUER_ID="XXXXXXXXXXXXXXXXXXX"
+export GOOGLE_WALLET_CLASS_SUFFIX="XXXXXXXXXXXXXXXXX"
+export GOOGLE_WALLET_APPLICATION_CREDENTIALS="/path/to/credentials.json" # remember to allow read perms
+
+
+
 ./env/bin/gunicorn --workers 3 --log-file=gunicorn.log --bind unix:backend.sock app.wsgi:application
