--- a/management.sh.template
+++ b/management.sh.template
@@ -1,7 +1,7 @@
 #!/bin/bash
 export PROD_MODE="True"
 # Set up your postgres password
-export PG_PWD="password"
+export POSTGRES_PASSWORD="password"
 # If using Sendgrid set api key here
 export SG_KEY="API_KEY"
 # Domain where running
