--- a/restart.sh.template
+++ b/restart.sh.template
@@ -1,7 +1,7 @@
 #!/bin/sh
 export PROD_MODE="True"
 # Set up your postgres password
-export PG_PWD="password"
+export POSTGRES_PASSWORD="password"
 # Domain where running
 export DOMAIN="my.hackupc.com"
 
