Add default env values

--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,9 @@
-PROD_MODE=""
+PROD_MODE="True"
 SECRET=""
-POSTGRES_DB=""
-POSTGRES_USER=""
-POSTGRES_PASSWORD=""
-POSTGRES_HOST=""
+POSTGRES_DB="postgres"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="password"
+POSTGRES_HOST="db"
 SG_KEY=""
 TP_KEY=""
 DOMAIN=""
