Clean dockerfile + prepare to deploy

--- a/.env.template
+++ b/.env.template
@@ -12,3 +12,5 @@ GOOGLE_RECAPTCHA_SECRET_KEY=""
 GOOGLE_RECAPTCHA_SITE_KEY=""
 CAS_SERVER=""
 OIDC_DISCOVERY_ENDPOINT=""
+POSTGRES_PORT="5432"
+MYHACKUPC_PORT="8000"
