Disable google wallet + add env

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,6 @@ CAS_SERVER=""
 OIDC_DISCOVERY_ENDPOINT=""
 POSTGRES_PORT="5432"
 MYHACKUPC_PORT="8000"
+GOOGLE_WALLET_ISSUER_ID=""
+GOOGLE_WALLET_CLASS_SUFFIX=""
+GOOGLE_WALLET_APPLICATION_CREDENTIALS="/path/to/credentials.json" # remember to allow read perms
