--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.2.23
 django-bootstrap3==15.0.0
+django-crontab==0.7.1
 django-filter==2.4.0
 django-multiselectfield==0.1.12
 django-storages==1.9.1
